--- a/Dream_shop/templates/store/store.html
+++ b/Dream_shop/templates/store/store.html
@@ -3,24 +3,30 @@
 {% load static %}
 
 {% block content %}
-  <div class="background">
-    <h1 class="page-title">Titre de la page</h1>
-    <div class="product-grid">
-      <!-- Répétez cette structure pour chaque produit -->
-      <div class="product-card">
-        <div class="product-image">
-          <div class="image-face front">
-            <img src="{% static 'styles/images/carrousel/men01.jpg' %}" alt="Nom du produit">
-          </div>
-          <div class="image-face back">
-            <img src="{% static 'styles/images/carrousel/men01.jpg' %}" alt="Nom du produit">
-          </div>
+
+<div class="background-store">
+  <h1 class="page-title">Collection Complète</h1>
+  <span class="product_count">Total articles :<b>{{ product_count }}</b></span>
+  <div class="product-grid">
+    {% for product in products %}
+    <!-- Répétez cette structure pour chaque produit -->
+    <div class="product-card">
+      <div class="product-image">
+        <div class="image-face {% if product.second_image %}front{% endif %}">
+          <img src="{{ product.images.url }}" alt="Vêtement de face">
         </div>
-        <h2 class="product-name">Nom du produit</h2>
-        <p class="product-price">€100.00</p>
-        <a class="product-details" href="#">Voir les détails</a>
+        {% if product.second_image %}
+        <div class="image-face back">
+          <img src="{{ product.second_image.url }}" alt="Vêtement de dos">
+        </div>
+        {% endif %}
       </div>
-      <!-- Répétez pour chaque produit -->
+      <h2 class="product-name">{{ product.product_name }}</h2>
+      <p class="product-price">€ {{ product.price }}</p>
+      <a class="product-details" href="#">Voir les détails</a>
     </div>
+    {% endfor %}
   </div>
+</div>
+
 {% endblock %}
