--- a/Dream_shop/templates/home.html
+++ b/Dream_shop/templates/home.html
@@ -10,43 +10,43 @@
       <section class="home-carousel">
       <div class="container-index">
         <div id="slide">
-            <div class="item women01">
-                <div class="content">
-                    <div class="name">Nouveautés</div>
-                    <p class="des">Styles féminins irrésistibles, découvrez nos nouveautés !</p>
-                    <a class="btn-car" href="#">Découvrir</a>
-                </div>
-            </div>
-            <div class="item men01">
+            <div class="item" style="background-image: url(static/styles/images/carrousel/men01.jpg);">
                 <div class="content">
                     <div class="name">Nouveautés</div>
                     <p class="des">Découvrez les dernières tendances masculines !</p>
                     <a class="btn-car" href="#">Découvrir</a>
                 </div>
             </div>
-            <div class="item women02">
+            <div class="item" style="background-image: url(static/styles/images/carrousel/women01.jpg);">
                 <div class="content">
+                    <div class="name">Nouveautés</div>
+                    <p class="des">Styles féminins irrésistibles, découvrez nos nouveautés !</p>
+                    <a class="btn-car" href="#">Découvrir</a>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(static/styles/images/carrousel/women02.jpg);">
+              <div class="content">
                     <div class="name">Nouveautés</div>
                     <p class="des">Découvrez les dernières tendances féminines !</p>
                     <a class="btn-car" href="#">Découvrir</a>
                 </div>
             </div>
-            <div class="item men02">
-                <div class="content">
+            <div class="item" style="background-image: url(static/styles/images/carrousel/men02.jpeg);">
+              <div class="content">
                     <div class="name">Nouveautés</div>
                     <p class="des">Découvrez les dernières tendance pour hommes !</p>
                     <a class="btn-car" href="#">Découvrir</a>
                 </div>
             </div>
-            <div class="item women03">
-                <div class="content">
+            <div class="item" style="background-image: url(static/styles/images/carrousel/women03.jpg);">
+              <div class="content">
                     <div class="name">Nouveautés</div>
                     <p class="des">Accessoires irrésistibles : démarquez-vous !</p>
                     <a class="btn-car" href="#">Découvrir</a>
                 </div>
             </div>
-            <div class="item men03">
-                <div class="content">
+            <div class="item" style="background-image: url(static/styles/images/carrousel/men03.jpg);">
+              <div class="content">
                     <div class="name">Nouveautés</div>
                     <p class="des">Accessoires tendances pour parfaire votre style !</p>
                     <a class="btn-car" href="#">Découvrir</a>
