--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -130,5 +130,6 @@
               <a href="#"><i class="fas fa-user"></i></a>
             </div>
           </nav>
+          <div id="dummy_nav" style="display:none;"></div>
     
         </header>
