--- a/Dream_shop/dream_shop/static/styles/index.css
+++ b/Dream_shop/dream_shop/static/styles/index.css
@@ -17,8 +17,8 @@
 /* Style du conteneur de carrousel */
 .home-carousel{
   width: 100%;
-  height: 50em;
-  margin-bottom: 10px;
+  height: 70vh;
+  margin-bottom: 0px;
 }
 /* Style du conteneur d'index */
 .container-index{
@@ -28,7 +28,8 @@
   transform: translate(-50%,-50%);
   width: 100%;
   height: 70vh;
-  margin-top: 140px;
+  margin-top: 90px;
+  padding-bottom: 92px;
   background-color: #f5f5f5;
   box-shadow: 0 30px 50px #dbdbdb;
 }
@@ -52,44 +53,13 @@
   border-radius: 20px;
   box-shadow:  0 30px 50px #505050;
 }
-/* style image1 */
-.item.women01 {
-  background: url(images/carrousel/women02.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.item.women02 {
-  background: url(images/carrousel/women01.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.item.women03 {
-  background: url(images/carrousel/women03.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.item.men01 {
-  background: url(images/carrousel/men01.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.item.men02 {
-  background: url(images/carrousel/men02.jpeg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.item.men03 {
-  background: url(images/carrousel/men03.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-}
 /* Styles pour les deux premiers éléments */
 .item:nth-child(1),
 .item:nth-child(2){
   left:0;
   top:0;
   transform: translate(0,0);
-  border-radius: 0;
+  border-radius: 0px;
   width:100%;
   height:100%;
   box-shadow: none;
@@ -114,11 +84,11 @@
 /* Style du contenu dans chaque élément du diaporama */
 .item .content{
   position: absolute;
-  top:50%;
-  left:100px;
-  width:300px;
+  top: 50%;
+  left: 100px;
+  width: 300px;
   text-align: left;
-  padding:0;
+  padding: 0;
   color: var(--thirdly-color);
   transform: translate(0,-50%);
   display: none;
@@ -220,7 +190,7 @@
 /* section bestseller */
 .section-bestseller {
   position: relative;
-  margin-top: 100px;
+  margin-top: -80px;
   overflow: hidden; /* cache les débordements causés par la rotation */
 }
 /* Centrer et styliser le titre de la section Meilleures ventes */
@@ -230,7 +200,7 @@
   font-weight: 100;
   color: var(--thirdly-color);
   padding: 19px 0;
-  margin-top: 70px;
+  margin-top: 90px;
   font-family: var(--font-family-primary);
 }
 /* background retourné */
