--- a/Dream_shop/templates/store/store.html
+++ b/Dream_shop/templates/store/store.html
@@ -21,7 +21,7 @@
         </div>
         {% endif %}
       </div>
-      <h2 class="product-name">{{ product.product_name }}</h2>
+      <h2 class="product-name">{{ product.title_online }}</h2>
       <p class="product-price">€ {{ product.price }}</p>
       <a class="product-details" href="#">Voir les détails</a>
     </div>
