--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -5,109 +5,109 @@
      ################################################################################################### -->
 
 
-         <header>
-      
-          <!-- MESSAGE PROMO -->
-          <div class="promo-message"></div>
-          <div class="top-header">
-            <div class="logo">
-              <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Blanc.png' %}" alt="Logo boutique">
-            </div>
-            <!-- LOGOS RESEAUX SOCIAUX -->
-            <div class="social-icons">
-              <a href=https://www.instagram.com/maboutiquedereve/ target="_blank" rel="noopener"><img
-                  src="{% static 'styles/images/logos-social/logo-instagram.svg' %}" alt="logo instagram"></a>
-              <a href="https://www.facebook.com/profile.php?id=100089077755487" target="_blank" rel="noopener"><img
-                  src="{% static 'styles/images/logos-social/logo-facebook.svg' %}" alt="logo facebook"></a>
-            </div>
-          </div>
-    
-    
-          <!-- ###################################################################################################
-               ############################################  NAVBAR  #############################################
-               ################################################################################################### -->
-          <nav class="nav-bar sticky-nav" id="navbar_fix">
-            <ul class="menu">
+<header>
+
+  <!-- MESSAGE PROMO -->
+  <div class="promo-message"></div>
+  <div class="top-header">
+    <div class="logo">
+      <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Blanc.png' %}" alt="Logo boutique">
+    </div>
+    <!-- LOGOS RESEAUX SOCIAUX -->
+    <div class="social-icons">
+      <a href=https://www.instagram.com/maboutiquedereve/ target="_blank" rel="noopener"><img
+          src="{% static 'styles/images/logos-social/logo-instagram.svg' %}" alt="logo instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=100089077755487" target="_blank" rel="noopener"><img
+          src="{% static 'styles/images/logos-social/logo-facebook.svg' %}" alt="logo facebook"></a>
+    </div>
+  </div>
+
+
+  <!-- ###################################################################################################
+       ############################################  NAVBAR  #############################################
+       ################################################################################################### -->
+  <nav class="nav-bar sticky-nav" id="navbar_fix">
+    <ul class="menu">
+      <li>
+        <a href="{% url 'home' %}">Accueil</a>
+      </li>
+      <li>
+        <a href="#">Femme</a>
+        <ul>
+          <li>
+            <a href="#">Vêtements</a>
+            <ul>
+              {% for category in women_links %}
               <li>
-                <a href="#">Accueil</a>
+                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
               </li>
-              <li>
-                <a href="#">Femme</a>
-                <ul>
-                  <li>
-                    <a href="#">Vêtements</a>
-                    <ul>
-                      {% for category in women_links %}
-                      <li>
-                        <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-                      </li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Accessoires</a>
-                    <ul>
-                      {% for category in women_acc %}
-                      <li>
-                        <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-                      </li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="{% url 'store' %}?gender=women">Collection Complète</a>
-                </li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">Homme</a>
-                <ul>
-                  <li>
-                    <a href="#">Vêtements</a>
-                    <ul>
-                      {% for category in men_links %}
-                      <li>
-                        <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-                      </li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Accessoires</a>
-                    <ul>
-                      {% for category in men_acc %}
-                      <li>
-                        <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-                      </li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="{% url 'store' %}?gender=men">Collection Complète</a>
-                  </li>
-                
-                </ul>
-              </li>
-              <li>
-                <a href="#contact_section">Contact</a>
-              </li>
+              {% endfor %}
             </ul>
-            <!-- ###################################################################################################
-                 ##########################################  SEARCH BAR  ###########################################
-                 ################################################################################################### -->
-    
-            <div class="search-bar">
-              <input type="text" placeholder="Rechercher...">
-            </div>
-            <!-- ###################################################################################################
-                 ###########################################  LOGOS BAR  ###########################################
-                 ################################################################################################### -->
-    
-            <div class="nav-section">
-              <a href="#"><i class="fas fa-shopping-cart"></i><span id="cart-items">0</span></a>
-              <a href="#"><i class="fas fa-user"></i></a>
-            </div>
-          </nav>
-          <div id="dummy_nav" style="display:none;"></div>
-    
-        </header>
+          </li>
+          <li>
+            <a href="#">Accessoires</a>
+            <ul>
+              {% for category in women_acc %}
+              <li>
+                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+              </li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li>
+            <a href="{% url 'store' %}?gender=women">Collection Complète</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Homme</a>
+        <ul>
+          <li>
+            <a href="#">Vêtements</a>
+            <ul>
+              {% for category in men_links %}
+              <li>
+                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+              </li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li>
+            <a href="#">Accessoires</a>
+            <ul>
+              {% for category in men_acc %}
+              <li>
+                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+              </li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li>
+            <a href="{% url 'store' %}?gender=men">Collection Complète</a>
+          </li>
+
+        </ul>
+      </li>
+      <li>
+        <a href="#contact_section">Contact</a>
+      </li>
+    </ul>
+    <!-- ###################################################################################################
+         ##########################################  SEARCH BAR  ###########################################
+         ################################################################################################### -->
+
+    <div class="search-bar">
+      <input type="text" placeholder="Rechercher...">
+    </div>
+    <!-- ###################################################################################################
+         ###########################################  LOGOS BAR  ###########################################
+         ################################################################################################### -->
+
+    <div class="nav-section">
+      <a href="#"><i class="fas fa-shopping-cart"></i><span id="cart-items">0</span></a>
+      <a href="#"><i class="fas fa-user"></i></a>
+    </div>
+  </nav>
+  <div id="dummy_nav" style="display:none;"></div>
+
+</header>
