--- a/Dream_shop/templates/base.html
+++ b/Dream_shop/templates/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'styles/header.css' %}">
     <link rel="stylesheet" href="{% static 'styles/store.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/product_details.css' %}">
     <link rel="stylesheet" href="{% static 'styles/footer.css' %}">
     <link rel="stylesheet" href="{% static 'styles/signin.css' %}">
     <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
