--- a/Dream_shop/templates/home.html
+++ b/Dream_shop/templates/home.html
@@ -69,8 +69,8 @@
         <div class="product-card" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <img src="{{ product.images.url }}" alt="Produit Femme">
             <h3 class="product-name">{{ product.title_online }}</h3>
-            <p class="product-price">{{ product.price }} €</p>
-            <a href="#" class="product-button">Voir le produit</a>
+            <p class="product-price">{{ product.price|floatformat:2 }} €</p>
+            <a href="{{ product.get_url }}" class="product-button">Voir le produit</a>
         </div>
         {% endfor %}
     </div>
