--- a/Dream_shop/templates/includes/footer.html
+++ b/Dream_shop/templates/includes/footer.html
@@ -25,8 +25,10 @@
             <div class="footer-logo-newsletter">
               <a href="signup.html" class="newsletter-button">S'inscrire à la newsletter</a>
               <div class="footer-logo">
-                <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Couleur.png' %}" alt="Logo boutique">
-                <p><em>N°Siret:</em> 89419864700022</p>
+                <a href="{% url 'store' %}">
+                  <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Couleur.png' %}" alt="Logo boutique">
+                </a>
+                  <p><em>N°Siret:</em> 89419864700022</p>
               </div>
             </div>
             <!-- SECTION INFOS DROITE -->
