--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -11,7 +11,9 @@
   <div class="promo-message"></div>
   <div class="top-header">
     <div class="logo">
+      <a href="{% url 'store' %}">
       <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Blanc.png' %}" alt="Logo boutique">
+    </a>
     </div>
     <!-- LOGOS RESEAUX SOCIAUX -->
     <div class="social-icons">
