--- a/Dream_shop/dream_shop/static/styles/cart.css
+++ b/Dream_shop/dream_shop/static/styles/cart.css
@@ -1,15 +1,9 @@
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* Styles pour le conteneur du panier */
+.cart-container {
   background-color: rgba(255, 255, 255, 0.7); 
-  border-radius: 20px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
-
+/* Style pour le titre du panier */
 .title-cart {
   text-align: center;
   font-family: 'Ananda', Arial, Helvetica, sans-serif;
@@ -19,13 +13,13 @@
   margin-top: 50px;
   margin-bottom: 80px;
 }
-
+/* Styles pour le tableau du panier */
 .cart-table {
   width: 100%;
   text-align: left;
   border-collapse: collapse;
 }
-
+/* Styles pour le contenu de table */
 .cart-table th, 
 .cart-table td {
   padding: 15px;
@@ -34,32 +28,36 @@
   border-bottom: 1px solid #ddd;
   color: #315D68;
 }
-
+/* Styles pour l'image du table */
 .cart-table img {
   width: 150px;
   height: auto;
 }
+/* Styles pour le texte dans table */
 .cart-table tbody td {
   font-size: 20px;
   text-align: center;
 }
+/* Styles pour l'input wrapper */
 .input-wrapper {
   height: 20px;
   font-size: 18px;
 }
+/* Styles pour l'input quantité */
 .input-wrapper input {
   height: 100%;
   font-size: 20px;
   width: 80px;
   text-align: center;
 }
+/* Styles pour l'icône de suppression */
 .delete-button {
   font-size: 16px;
   transition: all 0.2s ease-in-out;
   background: none;
   border: none;
 }
-
+/* Styles survol pour l'icône de suppression */
 .delete-button:hover {
   background-color: rgba(255, 255, 255, 0.1);
   color: #ffffff;
@@ -69,16 +67,14 @@
   text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
   cursor: pointer;
 }
-
-
-/*Styles pour le résumé du panier*/
+/* Styles pour le résumé du panier */
 .cart-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
 }
-
+/* Styles pour le conteneur du résumé du panier */
 .cart-summary {
   padding: 30px;
   border: 1px solid #ddd;
@@ -87,14 +83,14 @@
   margin-bottom: 30px;
   width: 30%;
 }
-
+/* Styles pour le titre du résumé du panier */
 .cart-summary h4 {
   margin-bottom: 20px;
   font-weight: 600;
   color: #315D68;
   font-size: 1.5em;
 }
-
+/* Styles pour chaque élément du résumé du panier */
 .cart-summary .summary-item {
   display: flex;
   justify-content: space-between;
@@ -103,33 +99,34 @@
   font-size: 1.1em;
   color: #333;
 }
-
+/* Styles pour le texte des éléments du résumé du panier */
 .cart-summary .summary-item p {
   margin: 0;
 }
-
+/* Styles pour le montant des éléments du résumé du panier */
 .cart-summary .summary-item span {
   font-weight: 600;
   color: #315D68;
 }
-
+/* Styles pour l'élément total du résumé du panier */
 .cart-summary .summary-item.total {
   font-size: 1.3em;
   margin-top: 40px;
 }
+/* Styles pour les inputs dans le résumé du panier */
 .cart-summary input {
   height: 30px;
   font-size: 20px;
   width: 150px;
 }
-
+/* Styles pour les boutons de validation */
 .checkout-buttons {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
 }
-
+/* Styles pour les boutons de validation */
 .checkout-buttons button {
   padding: 10px 20px;
   background-color: #315D68;
@@ -140,7 +137,7 @@
   font-size: 1.1em;
   transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-
+/* Styles pour le survol des boutons de validation */
 .checkout-buttons button:hover {
   background-color: #1a2e45;
   color: #fff;
