--- a/Dream_shop/templates/store/cart.html
+++ b/Dream_shop/templates/store/cart.html
@@ -2,7 +2,17 @@
 
 {% block content %}
 
+
 <div class="cart-container">
+  {% if not cart_items %}
+  
+  <h2 class="empty-cart">Votre panier est vide</h2>
+  <br><br>
+  <div class="text-center">
+    <a href="{% url 'store' %}" class="btn-cart">Continuez vos achats</a>
+  </div>
+  
+  {% else %}
   <h3 class="title-cart">Panier d'achat</h3>
   <table class="cart-table">
     <thead>
@@ -17,50 +27,82 @@
       </tr>
     </thead>
     <tbody>
+
+      {% for cart_item in cart_items %}
       <tr>
-        <td><img class="product-img" src="img_url" alt="product image"></td>
-        <td><a href="#">Nom du produit</a></td>
+        <td><img class="product-img" src="{{ cart_item.product.images.url }}" alt="product image"></td>
+        <td><a href="#">{{ cart_item.product.title_online }}</a></td>
         <td>
-          <div class="input-wrapper">
-            <input type="number" min="1" value="1">
+          <div class="quantity-buttons">
+            <a href="{% url 'remove_cart' cart_item.product.id %}" class="button-cart1" style="text-decoration: none;">
+            <button type="button" onclick="decrementQuantity(this)" data-product-id="{{ cart_item.product.id }}" style="font-size: 24px; width: 40px; height: 40px; padding: 0; line-height: 40px; margin-right: 10px;">-</button>
+          </a>
+            <span class="product-quantity" style="font-size: 24px; width: 40px; height: 40px; text-align: center; ">{{ cart_item.quantity }}</span>
+          <a href="{% url 'add_cart' cart_item.product.id %}" class="button-cart2">
+            <button type="button" onclick="incrementQuantity(this)" data-product-id="{{ cart_item.product.id }}" style="font-size: 24px; width: 40px; height: 40px; padding: 0; line-height: 40px; margin-left: 10px;">+</button>
+          </a>
           </div>
+          
         </td>
         <td>S</td>
-        <td>10€</td>
-        <td>10€</td>
-        <td><button class="delete-button">🗑️</button></td>
+        <td>{{ cart_item.product.price|floatformat:2 }}€</td>
+        <td>{{ cart_item.sub_total|floatformat:2 }}€</td>
+        <td>
+          <a href="{% url 'remove_cart_item' cart_item.product.id %}">
+          <button class="delete-button">🗑️</button>
+          </a>
+        </td>
       </tr>
-      <!-- Add more product rows as necessary -->
+      {% endfor %}
+
     </tbody>
   </table>
+
 </div>
 <div class="cart-wrapper">
   <div class="cart-summary">
     <h4>Résumé du panier</h4>
     <div class="summary-item">
-      <p>Sous-total : </p><span>20€</span>
+      <p>Sous-total : </p><span>{{ total|floatformat:2 }}€</span>
     </div>
     <div class="summary-item">
       <p>Code de réduction :</p>
       <input type="text" id="discountCode" name="discountCode">
     </div>
     <div class="summary-item">
-      <p>Option de livraison : </p><span>Standard (5€)</span>
+      <p>Option de livraison : </p><span>Gratuit</span>
     </div>
     <div class="summary-item">
-      <p>Total provisoire : </p><span>25€</span>
-    </div>
-    <div class="summary-item">
-      <p>Taxes : </p><span>5€</span>
+      <p>Taxes incluses: </p><span>{{ tax|floatformat:2 }}€</span>
     </div>
     <div class="summary-item total">
-      <p>Total final : </p><span>30€</span>
+      <p>Total final : </p><span>{{ total|floatformat:2 }}€</span>
     </div>
     <div class="checkout-buttons">
+      <a href="{% url 'store' %}">
       <button type="button">Continuer les achats</button>
+      </a>
       <button type="button">Passer à la caisse</button>
     </div>
   </div>
+  {% endif %}
 </div>
+
+
+<script>
+  function incrementQuantity(buttonElement) {
+    var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
+    var currentQuantity = parseInt(quantitySpan.innerText);
+    quantitySpan.innerText = currentQuantity + 1;
+  }
+
+  function decrementQuantity(buttonElement) {
+    var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
+    var currentQuantity = parseInt(quantitySpan.innerText);
+    if (currentQuantity > 1) {
+      quantitySpan.innerText = currentQuantity - 1;
+    }
+  }
+</script>
 
 {% endblock %}
